# Tetris

./: CMakeLists.txt  README.md  main.cpp
include/db_access/: AbstractTetrisDB.h  MongoTetrisDB.h
include/game/: Game.h  GameScore.h  TetrisLayout.h
include/game/shapes/: AbstractShape.h  BasicShape.h  NotActiveShape.h
include/game/shapes/figures/: AbstractFigureShape.h  TetrisFigureShape.h
src/game/: Game.cpp  TetrisLayout.cpp
src/game/shapes/: NotActiveShape.cpp
src/game/shapes/figures/: TetrisFigureShape.cpp
